--- a/resources/disini-ya/index.html
+++ b/resources/disini-ya/index.html
@@ -94,7 +94,7 @@
                         <td>Vts</td>
                         <td>q01</td>
                         <td>CP023456</td>
-                        <td>Cancelled</td>
+                        <td><a href="detail.html">Canceled</a></td>
                     </tr>
                     <tr>
                         <td>LI-2022-0058</td>
