--- a/resources/disini-ya/detail.html
+++ b/resources/disini-ya/detail.html
@@ -45,7 +45,7 @@
             </header>
             <article class="container">
                 <div>
-                    <button>back</button>
+                    <button><a href="index.html">back</a></button>
                 </div>
                 <section>
                     <div class="row">
@@ -115,18 +115,19 @@
                             <p><b>Item</b></p>
                         </div>
                         <div class="form-check me-3">
-                            <label
-                                class="form-check-label"
-                                for="flexRadioDefault1"
-                            >
-                                Yes
-                            </label>
                             <input
                                 class="form-check-input"
                                 type="radio"
-                                name="flexRadioDefault"
-                                id="flexRadioDefault1"
+                                name="flexRadioDefault5"
+                                id="flexRadioDefault15"
+                                disabled
                             />
+                            <label
+                                class="form-check-label"
+                                for="flexRadioDefault15"
+                            >
+                                Yes
+                            </label>
                         </div>
                         <div class="form-check">
                             <label
@@ -149,18 +150,19 @@
                             <p><b>Transport</b></p>
                         </div>
                         <div class="form-check me-3">
+                            <input
+                                class="form-check-input"
+                                type="radio"
+                                name="flexRadioDefault"
+                                id="flexRadioDefault1"
+                                disabled
+                            />
                             <label
                                 class="form-check-label"
                                 for="flexRadioDefault1"
                             >
                                 Yes
                             </label>
-                            <input
-                                class="form-check-input"
-                                type="radio"
-                                name="flexRadioDefault"
-                                id="flexRadioDefault1"
-                            />
                         </div>
                         <div class="form-check">
                             <label
@@ -198,18 +200,19 @@
                             />
                         </div>
                         <div class="form-check">
+                            <input
+                                class="form-check-input"
+                                disabled
+                                type="radio"
+                                name="flexRadioDefault"
+                                id="flexRadioDefault1"
+                            />
                             <label
                                 class="form-check-label"
                                 for="flexRadioDefault1"
                             >
                                 No
                             </label>
-                            <input
-                                class="form-check-input"
-                                type="radio"
-                                name="flexRadioDefault"
-                                id="flexRadioDefault1"
-                            />
                         </div>
                     </div>
                     <div class="d-flex">
@@ -217,18 +220,19 @@
                             <p><b>Scope of Work</b></p>
                         </div>
                         <div class="form-check me-3">
+                            <input
+                                class="form-check-input"
+                                type="radio"
+                                name="flexRadioDefault"
+                                id="flexRadioDefault1"
+                                disabled
+                            />
                             <label
                                 class="form-check-label"
                                 for="flexRadioDefault1"
                             >
                                 Yes
                             </label>
-                            <input
-                                class="form-check-input"
-                                type="radio"
-                                name="flexRadioDefault"
-                                id="flexRadioDefault1"
-                            />
                         </div>
                         <div class="form-check">
                             <label
