--- a/resources/disini-ya/index.html
+++ b/resources/disini-ya/index.html
@@ -94,7 +94,7 @@
                         <td>Vts</td>
                         <td>q01</td>
                         <td>CP023456</td>
-                        <td><a href="detail.html">Canceled</a></td>
+                        <td><a href="detail-cancel.html">Canceled</a></td>
                     </tr>
                     <tr>
                         <td>LI-2022-0058</td>
@@ -105,7 +105,7 @@
                         <td>Vts</td>
                         <td>q01</td>
                         <td>CP023456</td>
-                        <td>Complete</td>
+                        <td><a href="detail-complete.html">Completed</a></td>
                     </tr>
                 </tbody>
                 <tfoot>
