--- a/resources/disini-ya/detail-cancel.html
+++ b/resources/disini-ya/detail-cancel.html
@@ -22,9 +22,9 @@
                 text-decoration: none;
                 color: black;
             }
-            .bi1:hover {
+            .bi1 a:hover {
                 border: 1px solid green;
-                width: 5%;
+                padding: 10px;
                 border-radius: 5px;
             }
 
@@ -152,7 +152,7 @@
                                             href="#"
                                             data-bs-toggle="popover"
                                             data-bs-placement="top"
-                                            data-bs-content="And here's some amazing content. It's very engaging. Right?"
+                                            data-bs-content="Intinya mah cancel, jangan banyak tanya kamu ! xixi"
                                             style="
                                                 position: absolute;
                                                 margin-left: -28px;
